fix text overflow

--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Atma');
 
 .card_general {
-	width: 62%;
+	width: 69%;
 	/*height: 80%*/
 	margin: 5px auto;
 	background-image: url('flash_card_background_v5.png');
+	background-size: cover;
 	/*box-shadow: 0px 5px 20px #555;*/
 	margin-top: 2em;
 	/*margin-bottom: 2em;*/
 	padding-top: 5em;
 	padding-bottom: 2em;
-	padding-right: 5em;
+	padding-right: 3em;
+	padding-left: 3em;
 	/*border-radius: 25px;*/
 	font-size: large;
 	font-family: 'Atma';font-size: 22px;
